--- a/test/test.html
+++ b/test/test.html
@@ -1,6 +1,8 @@
-<h1 id="toc_0">Test</h1>
+<h1 id="test">Test</h1>
 
 <p>This is a test data</p>
+
+<h2 id="equation">Equation</h2>
 
 <p>This is an equation, <math xmlns='http://www.w3.org/1998/Math/MathML' display='inline'><msup><mi>x</mi><mn>2</mn></msup><mo stretchy='false'>+</mo><msup><mi>y</mi><mn>2</mn></msup><mo stretchy='false'>=</mo><msup><mi>r</mi><mn>2</mn></msup></math></p>
 
@@ -16,3 +18,63 @@
 
 <p>vector:
 <math xmlns='http://www.w3.org/1998/Math/MathML' display='inline'><mover><mrow><mi>x</mi></mrow><mo>&rightarrow;</mo></mover><mo stretchy='false'>+</mo><mover><mrow><mi>y</mi></mrow><mo>&rightarrow;</mo></mover><mo stretchy='false'>=</mo><mover><mrow><mi>p</mi></mrow><mo>&rightarrow;</mo></mover></math></p>
+
+<h2 id="markdown">Markdown</h2>
+
+<p><em>italic</em></p>
+
+<p><u>underline</u></p>
+
+<p><strong>bold</strong></p>
+
+<p><strong><em>bold italic</em></strong></p>
+
+<h3 id="list">List</h3>
+
+<ul>
+<li>item1</li>
+<li>item2
+
+<ul>
+<li>nested item2-1</li>
+<li>nested item2-2</li>
+</ul></li>
+</ul>
+
+<ol>
+<li>item3</li>
+<li>item4</li>
+</ol>
+
+<h3 id="quote">Quote</h3>
+
+<blockquote>
+<p>quote</p>
+</blockquote>
+
+<h3 id="table">Table</h3>
+
+<table><thead>
+<tr>
+<th style="text-align: left">head1</th>
+<th style="text-align: center">head2</th>
+<th style="text-align: right">head3</th>
+</tr>
+</thead><tbody>
+<tr>
+<td style="text-align: left">item</td>
+<td style="text-align: center">item</td>
+<td style="text-align: right">item</td>
+</tr>
+</tbody></table>
+
+<h3 id="syntax-highlight">Syntax highlight</h3>
+
+<pre><code class="ruby">a = [1, 2, 3]
+a.reduce(0, :+)
+</code></pre>
+
+<h3 id="link">Link</h3>
+
+<p><a href="http://google.com">google</a></p>
+
